# rpc

./: .pre-commit-config.yaml  History.md  LICENSE  README.md  publish.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  pythonapp.yml
mause_rpc/: client.py  publish.py  server.py  test_rpc.py
tests/: test_rpc.py
