[tool.poetry]
name = "mause_rpc"
version = "0.0.20"
description = "A dumb as hell rpc implementation built on rabbitmq"
authors = ["Elliana May <me@mause.me>"]
repository = "https://github.com/Mause/rpc"
keywords = ["rabbitmq", "rpc"]
readme = "README.md"
license = "MIT"
include = ["mause_rpc/py.typed"]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8.1"
dill = "^0.3.1"
pika = "^1.1.0"
retry = "^0.9.2"

[tool.black]
skip_string_normalization = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
mypy = "^1.5"
black = "^23.9"
flake8 = "^6.0.0"
isort = "^5.10.1"
poetry-publish = "^0.5.0"
semver = "^3.0.0"
pre-commit = "^3.0.0"
pdbpp = "^0.10.3"
types-retry = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
